--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			</ul>
 
 			<ul id="icons">
-				<li><a href="https://github.com/Yuzuki-Ishikawa/portfolio" target="blank"><img src="img/github.png" alt="github" width="30" height="30"/></a></li>
+				<li><a href="https://github.com/Yuzuki-Ishikawa" target="blank"><img src="img/github.png" alt="github" width="30" height="30"/></a></li>
 				<li><a href="https://www.instagram.com/yuzuki_9146" target="blank"><img src="img/instagram.png" alt="imastagram" width="30" height="30"/></a></li>
 				<li><a href="mailto:swimmer.yuzu@keio.jp" target="blank"><img src="img/mail.png" alt="email" width="30" height="21"/></a></li>
 			</ul>
@@ -100,7 +100,7 @@
 
 		<div class="footer">
 			<ul id="icons">
-				<li><a href="https://github.com/Yuzuki-Ishikawa/portfolio" target="blank"><img src="img/github.png" alt="github" width="20" height="20"/></a></li>
+				<li><a href="https://github.com/Yuzuki-Ishikawa" target="blank"><img src="img/github.png" alt="github" width="20" height="20"/></a></li>
 				<li><a href="https://www.instagram.com/yuzuki_9146" target="blank"><img src="img/instagram.png" alt="imastagram" width="20" height="20"/></a></li>
 				<li><a href="mailto:swimmer.yuzu@keio.jp" target="blank"><img src="img/mail.png" alt="email" width="20" height="14"/></a></li>
 			</ul>
