--- a/English.html
+++ b/English.html
@@ -73,7 +73,7 @@
 
 				<ul class="work">
 					<li>
-						<a href="TODO">
+						<a href="https://github.com/Yuzuki-Ishikawa/Project_SP22">
 							<div class="work-inner">
 								<h3 class="workContents">EEG-based Machine Learning Classifier for Subclinical Depression</h3>
 							</div>
