--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 				<ul class="work">
 					<li>
-						<a href="TODO">
+						<a href="https://github.com/Yuzuki-Ishikawa/Project_SP22">
 							<div class="work-inner">
 								<h3 class="workContents">脳波データを用いた機械学習による軽症うつ患者の検出</h3>
 							</div>
