--- a/English.html
+++ b/English.html
@@ -43,19 +43,21 @@
 			<ul class="profileContents">
 				<li class="profileImage"><!-- 顔写真領域を確保--></li>
 				<li class="profileText">
-					<p>Hi! I'm Yuzuki, a senior undergraduate studying human cognitive and executive functions in the Cognitive Neuroscience Lab at Keio University. I've always been fascinated by how humans decide, feel, and interact with each other. My aim is to explore how those human functions go awry by psychiatric disorders and how we can contribute to improving our mental health. During my free time, I enjoy playing the tenor saxophone and writing Tanka poems!</p>
+					<p>Hi! I'm Yuzuki, a first-year graduate student studying psychiatric disorders in the Psychiatry Lab at Kyoto Graduate University. I've always been fascinated by how humans decide, feel, and interact with each other. My aim is to explore how those human functions go awry upon psychiatric disorders and how we can contribute to improving our mental health. During my free time, I enjoy playing the tenor saxophone and writing Tanka poems!</p>
 				</li>
 			</ul>
 
 			<ul id="icons">
 				<li><a href="https://github.com/Yuzuki-Ishikawa" target="blank"><img src="img/github.png" alt="github" width="30" height="30"/></a></li>
 				<li><a href="https://www.instagram.com/yuzuki_9146" target="blank"><img src="img/instagram.png" alt="imastagram" width="30" height="30"/></a></li>
-				<li><a href="mailto:swimmer.yuzu@keio.jp" target="blank"><img src="img/mail.png" alt="email" width="30" height="21"/></a></li>
+				<li><a href="mailto:yuzukii1004@gmail.com" target="blank"><img src="img/mail.png" alt="email" width="30" height="21"/></a></li>
 			</ul>
 
 
-			<h1 class="center" id="Education">Education</h1>
-			<p>04.2019 -  Keio University   Major: Biosciences and Informatics</p>
+			<h1 class="center" id="Education">Education and Work Experience</h1>
+			<p>04.2023 - Kyoto University  Major: Medical Sciences</p>
+			<p>06.2022 - Araya Inc. Research Internship Fellow</p>
+			<p>04.2019 - 03.2023  Keio University  Major: Biosciences and Informatics</p>
 			<p>08.2021 - 05.2022  University of Illinois at Urbana-Champaign Exchange Program</p>
 		
 			
@@ -76,9 +78,9 @@
 				</li>
 			
 				<li>
-					<a href="https://note.com/yuzuki_9146/n/n2049e0fbeabf">
+					<a href="https://github.com/Yuzuki-Ishikawa/SlackPaperPost">
 						<div class="work-inner">
-							<h3 class="workContents">Blog<br>Understanding mRNA Vaccines (Japanese)</h3>
+							<h3 class="workContents">SlackPaperPost<br>An automated Paper Summary System using ChatGPT, GCP, and Slack</h3>
 						</div>
 					</a>
 				</li>
@@ -91,10 +93,10 @@
 			<ul id="icons">
 				<li><a href="https://github.com/Yuzuki-Ishikawa" target="blank"><img src="img/github.png" alt="github" width="20" height="20"/></a></li>
 				<li><a href="https://www.instagram.com/yuzuki_9146" target="blank"><img src="img/instagram.png" alt="imastagram" width="20" height="20"/></a></li>
-				<li><a href="mailto:swimmer.yuzu@keio.jp" target="blank"><img src="img/mail.png" alt="email" width="20" height="14"/></a></li>
+				<li><a href="mailto:yuzukii1004@gmail.com" target="blank"><img src="img/mail.png" alt="email" width="20" height="14"/></a></li>
 			</ul>
 			
-			<p>Copyright (C) 2022 Yuzuki Isikawa All Rights Reserved.</p>
+			<p>Copyright (C) 2023 Yuzuki Isikawa All Rights Reserved.</p>
 		</div>
 
 <script
