--- a/index.html
+++ b/index.html
@@ -43,24 +43,24 @@
 				<li class="profileImage"><!-- 顔写真領域を確保--></li>
 				<li class="profileText">
 					<p>出身：神奈川県横浜市</p>
-					<p>趣味：ジャズサックス、短歌</p>
-					<p>慶應義塾大学理工学部生命情報学科4年。認知神経科学研究室 (地村研究室) 所属。ヒトはどのようにして外界を認知し行動するのか、精神疾患ではそれらの認知・行動を支える脳機能がどのように変化するのか、ということに興味があります。精神疾患から解放された社会を目指していきたいです。</p>
+					<p>趣味：水泳、ジャズサックス、短歌</p>
+					<p>京都大学大学院 修士課程在籍中。生物の行動原理や動機が精神疾患によってどのように変化するのか、ということに興味があります。研究経験の実社会への応用も目指しています。</p>
 				</li>
 			</ul>
 
 			<ul id="icons">
 				<li><a href="https://github.com/Yuzuki-Ishikawa" target="blank"><img src="img/github.png" alt="github" width="30" height="30"/></a></li>
 				<li><a href="https://www.instagram.com/yuzuki_9146" target="blank"><img src="img/instagram.png" alt="imastagram" width="30" height="30"/></a></li>
-				<li><a href="mailto:swimmer.yuzu@keio.jp" target="blank"><img src="img/mail.png" alt="email" width="30" height="21"/></a></li>
+				<li><a href="mailto:yuzukii1004@gmail.com" target="blank"><img src="img/mail.png" alt="email" width="30" height="21"/></a></li>
 			</ul>
 
-
-			<h1 class="center" id="Education">Education</h1>
-			<p>2020.04 - 慶應義塾大学理工学部 生命情報学科</p>
+			<h1 class="center" id="Education">Education and Work Experience</h1>
+			<p>2023.04 - 京都大学大学院 医学研究科</p>
+			<p>2022.06 - Araya Inc. リサーチインターン</p>
+			<p>2020.04 - 2023.03 慶應義塾大学理工学部 生命情報学科</p>
 			<p>2021.08 - 2020.05 イリノイ大学アーバナ・シャンペーン校 交換留学</p>
 			<p>2019.04 - 2020.03 慶應義塾大学理工学部</p>
 		
-
 			<h1 class="center" id="Work">Work</h1>
 			<div class="publication">
 				<h2>学会発表</h2>
@@ -74,15 +74,15 @@
 				<li>
 					<a href="https://github.com/Yuzuki-Ishikawa/Project_SP22">
 						<div class="work-inner">
-							<h3 class="workContents">脳波データを用いた機械学習による軽症うつ患者の検出</h3>
+							<h3 class="workContents">機械学習<br>脳波データを用いた機械学習による軽症うつ患者の検出</h3>
 						</div>
 					</a>
 				</li>
 			
 				<li>
-					<a href="https://note.com/yuzuki_9146/n/n2049e0fbeabf">
+					<a href="https://github.com/Yuzuki-Ishikawa/SlackPaperPost">
 						<div class="work-inner">
-							<h3 class="workContents">note<br>mRNAワクチンについて</h3>
+							<h3 class="workContents">SlackPaperPost<br>ChatGPT, Slack, GCPを用いた<br>自動論文要約・通知アプリ</h3>
 						</div>
 					</a>
 				</li>
@@ -95,10 +95,10 @@
 			<ul id="icons">
 				<li><a href="https://github.com/Yuzuki-Ishikawa" target="blank"><img src="img/github.png" alt="github" width="20" height="20"/></a></li>
 				<li><a href="https://www.instagram.com/yuzuki_9146" target="blank"><img src="img/instagram.png" alt="imastagram" width="20" height="20"/></a></li>
-				<li><a href="mailto:swimmer.yuzu@keio.jp" target="blank"><img src="img/mail.png" alt="email" width="20" height="14"/></a></li>
+				<li><a href="yuzukii1004@gmail.com" target="blank"><img src="img/mail.png" alt="email" width="20" height="14"/></a></li>
 			</ul>
 			
-			<p>Copyright (C) 2022 Yuzuki Isikawa All Rights Reserved.</p>
+			<p>Copyright (C) 2023 Yuzuki Isikawa All Rights Reserved.</p>
 		</div>
 
 <script
