--- a/index.html
+++ b/index.html
@@ -63,8 +63,11 @@
 		
 			<h1 class="center" id="Work">Work</h1>
 			<div class="publication">
+				<h2>論文</h2>
+				<h3 class="publicationContents">Kawano, T., Zhou, J., Anwar, S., Salah, H., Dayal, H.A., <span style="font-weight:bold;">Ishikawa, Y.</span>, Boetel, K., Takahashi, T., Sharma, K., & Inoue, M. (2023). T cell infiltration into the brain triggers pulmonary dysfunction in murine Cryptococcus-associated IRIS. <span style="font-style:italic; font-weight:bold;">Nature Communications</span> 14, 3831</h3>
+				<br>
 				<h2>学会発表</h2>
-				<h3 class="publicationContents"><span style="font-weight:bold;">Ishikawa, Y.,</span> Tasuku, K., & Inoue, M. (2022). Brain-Lung Network Disconnection in Cryptococcus-associated Immune Reconstitution Inflammatory Syndrome. <span style="font-style:italic">The Undergraduate Research Symposium</span>, University of Illinois at Urbana-Champaign, IL</h3>
+				<h3 class="publicationContents"><span style="font-weight:bold;">Ishikawa, Y.,</span> Tasuku, K., & Inoue, M. (2022). Brain-Lung Network Disconnection in Cryptococcus-associated Immune Reconstitution Inflammatory Syndrome. <span style="font-style:italic; font-weight:bold;">The Undergraduate Research Symposium</span>, University of Illinois at Urbana-Champaign, IL</h3>
 			</div>
 			
 
