--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 			<h1 class="center" id="Education">Education and Work Experience</h1>
 			<p>2023.04 - 京都大学大学院 医学研究科</p>
-			<p>2022.06 - Araya Inc. リサーチインターン</p>
+			<p>2022.07 - Araya Inc. リサーチインターン</p>
 			<p>2020.04 - 2023.03 慶應義塾大学理工学部 生命情報学科</p>
 			<p>2021.08 - 2022.05 イリノイ大学アーバナ・シャンペーン校 交換留学</p>
 			<p>2019.04 - 2020.03 慶應義塾大学理工学部</p>
@@ -67,7 +67,7 @@
 				<h3 class="publicationContents">Kawano, T., Zhou, J., Anwar, S., Salah, H., Dayal, H.A., <span style="font-weight:bold;">Ishikawa, Y.</span>, Boetel, K., Takahashi, T., Sharma, K., & Inoue, M. (2023). T cell infiltration into the brain triggers pulmonary dysfunction in murine Cryptococcus-associated IRIS. <span style="font-style:italic; font-weight:bold;">Nature Communications</span> 14, 3831</h3>
 				<br>
 				<h2>学会発表</h2>
-				<h3 class="publicationContents"><span style="font-weight:bold;">Ishikawa, Y.,</span> Tasuku, K., & Inoue, M. (2022). Brain-Lung Network Disconnection in Cryptococcus-associated Immune Reconstitution Inflammatory Syndrome. <span style="font-style:italic; font-weight:bold;">The Undergraduate Research Symposium</span>, University of Illinois at Urbana-Champaign, IL</h3>
+				<h3 class="publicationContents"><span style="font-weight:bold;">Ishikawa, Y.,</span> Kawano, T., & Inoue, M. (2022). Brain-Lung Network Disconnection in Cryptococcus-associated Immune Reconstitution Inflammatory Syndrome. <span style="font-style:italic; font-weight:bold;">The Undergraduate Research Symposium</span>, University of Illinois at Urbana-Champaign, IL</h3>
 			</div>
 			
 
