--- a/English.html
+++ b/English.html
@@ -56,7 +56,7 @@
 
 			<h1 class="center" id="Education">Education and Work Experience</h1>
 			<p>04.2023 - Kyoto University  Major: Medical Sciences</p>
-			<p>06.2022 - Araya Inc. Research Internship Fellow</p>
+			<p>07.2022 - Araya Inc. Research Internship Fellow</p>
 			<p>04.2019 - 03.2023  Keio University  Major: Biosciences and Informatics</p>
 			<p>08.2021 - 05.2022  University of Illinois at Urbana-Champaign Exchange Program</p>
 		
@@ -67,7 +67,7 @@
 				<h3 class="publicationContents">Kawano, T., Zhou, J., Anwar, S., Salah, H., Dayal, H.A., <span style="font-weight:bold;">Ishikawa, Y.</span>, Boetel, K., Takahashi, T., Sharma, K., & Inoue, M. (2023). T cell infiltration into the brain triggers pulmonary dysfunction in murine Cryptococcus-associated IRIS. <span style="font-style:italic; font-weight:bold;">Nature Communications</span> 14, 3831</h3>
 				<br>
 				<h2>Poster Presentations</h2>
-				<h3 class="publicationContents"><span style="font-weight:bold;">Ishikawa, Y.,</span> Tasuku, K., & Inoue, M. (2022). Brain-Lung Network Disconnection in Cryptococcus-associated Immune Reconstitution Inflammatory Syndrome. <span style="font-style:italic">The Undergraduate Research Symposium</span>, University of Illinois at Urbana-Champaign, IL</h3>
+				<h3 class="publicationContents"><span style="font-weight:bold;">Ishikawa, Y.,</span> Kawano, T., & Inoue, M. (2022). Brain-Lung Network Disconnection in Cryptococcus-associated Immune Reconstitution Inflammatory Syndrome. <span style="font-style:italic">The Undergraduate Research Symposium</span>, University of Illinois at Urbana-Champaign, IL</h3>
 			</div>
 
 			<h2 class="workTitle">Products</h2>
